# Interclaude

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  PROGRESS.md  README.md  context.json  demo.tape
.cargo/: config.toml
.planning/: PROJECT.md  ROADMAP.md  STATE.md
.planning/phases/11-tui-ux-redesign/: 11-01-PLAN.md  11-01-SUMMARY.md  11-02-PLAN.md  11-02-SUMMARY.md  11-03-PLAN.md  11-03-SUMMARY.md  11-04-PLAN.md  11-04-SUMMARY.md  11-05-PLAN.md  11-05-SUMMARY.md
.planning/phases/12-word-wrap-access-portal/: 12-01-PLAN.md  12-01-SUMMARY.md  12-02-PLAN.md  12-02-SUMMARY.md  12-03-PLAN.md  12-03-SUMMARY.md
.planning/phases/13-error-resolution-engine/: 13-01-PLAN.md  13-01-SUMMARY.md  13-02-PLAN.md  13-02-SUMMARY.md  13-03-PLAN.md  13-03-SUMMARY.md
docs/: PROGRESS.md
scripts/: install-deps.sh  slave-watcher.sh
src/: app.rs  logging.rs  main.rs
src/api/: anthropic.rs
src/bridge/: connection.rs  engine.rs  handshake.rs  message.rs  mod.rs  session.rs  sync.rs  watcher.rs
src/config/: credentials.rs  mod.rs  settings.rs
src/error/: analysis.rs  correction.rs  logging.rs  mod.rs  pending.rs
src/transport/: dedup.rs  mcp_transport.rs  mod.rs  redis_transport.rs  rsync_transport.rs  status.rs
src/tui/: access_portal.rs  bridge.rs  error_overlay.rs  mod.rs  setup.rs  status_bar.rs  welcome.rs
