[package]
name = "interclaude"
version = "0.1.0"
edition = "2024"
description = "Cross-machine Claude Code bridge with multi-transport messaging"

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }

# Identifiers
uuid = { version = "1", features = ["v7"] }

# Redis
redis = { version = "0.27", features = ["tokio-comp", "aio"] }

# Async streams (for Redis pubsub)
futures-lite = "2"

# Error handling
anyhow = "1"
thiserror = "2"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Directory management
dirs = "6"

# Hostname for machine identification
hostname = "0.4"
